User Role Login Logout

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4",
         "livewire/livewire": "2.11",
+        "owen-it/laravel-auditing": "^13.5",
         "rappasoft/laravel-livewire-tables": "^2.15",
         "spatie/laravel-permission": "^6.1"
     },
@@ -29,6 +31,9 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
@@ -36,6 +41,9 @@
         }
     },
     "autoload-dev": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "psr-4": {
             "Tests\\": "tests/"
         }
