--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cviebrock/eloquent-sluggable": "^10.0",
         "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.8",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
