update di checkout

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_MERCHAT_ID=G871030472
+MIDTRANS_CLIENT_KEY=SB-Mid-client-oz8JZL0gFaefS7vI
+MIDTRANS_SERVER_KEY=SB-Mid-server-NBmQQcCWjtloLmZ6YfwiXUEw
