--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "2.11",
+        "midtrans/midtrans-php": "^2.5",
         "owen-it/laravel-auditing": "^13.5",
         "rappasoft/laravel-livewire-tables": "^2.15",
         "spatie/laravel-permission": "^6.1"
