--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_MERCHAT_ID=G871030472
 MIDTRANS_CLIENT_KEY=SB-Mid-client-oz8JZL0gFaefS7vI
 MIDTRANS_SERVER_KEY=SB-Mid-server-NBmQQcCWjtloLmZ6YfwiXUEw
+
+GOOGLE_CLIENT_ID=9805188258-aher3sma8gkv4nbfs8td6qsdlrl6aeaj.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_REDIRECT=http://127.0.0.1:8000/auth/google/callback
