--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "midtrans/midtrans-php": "^2.5",
         "owen-it/laravel-auditing": "^13.5",
         "rappasoft/laravel-livewire-tables": "^2.15",
-        "spatie/laravel-permission": "^6.1"
+        "spatie/laravel-permission": "^6.1",
+        "unisharp/laravel-filemanager": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
