update blog, pages,

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,12 @@ MIDTRANS_MERCHAT_ID=G871030472
 MIDTRANS_CLIENT_KEY=SB-Mid-client-oz8JZL0gFaefS7vI
 MIDTRANS_SERVER_KEY=SB-Mid-server-NBmQQcCWjtloLmZ6YfwiXUEw
 
+# midtrans punya elrista
+# MIDTRANS_IS_PRODUCTION=true
+# MIDTRANS_MERCHAT_ID=G395618460
+# MIDTRANS_CLIENT_KEY=Mid-client-8kbsvzrE1fwbl600
+# MIDTRANS_SERVER_KEY=Mid-server-AuKun_hS3zyqTyJMmXM7IO-s
+
 GOOGLE_CLIENT_ID=9805188258-aher3sma8gkv4nbfs8td6qsdlrl6aeaj.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CLIENT_REDIRECT=http://127.0.0.1:8000/auth/google/callback
